--- a/FinancialSuperman/Info.plist
+++ b/FinancialSuperman/Info.plist
@@ -11,7 +11,7 @@
 	<key>CFBundleIcons~ipad</key>
 	<dict/>
 	<key>CFBundleIdentifier</key>
-	<string>com.monster.FinancialSuperman</string>
+	<string>com.monster.fumi</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
